--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
 		<p />
 		<a name="NesterenkoSergey"></a>
 		<h2>Нестеренко Сергей Юрьевич</h2>
-		<a href='Nesterenko\guidoHomePage.htm'> домашняя страничка </a>
+		<a href='NesterenkoHomePage.htm'> домашняя страничка </a>
 		<h3>Как я добрался сегодня до Универитета</h3>
 		...
 		<h3>История из жизни</h3>
