Петров С.А. создал свой личный раздел

--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 		<h1>Оглавление</h1>
 		
 		<a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>
-		<!-- Здесь необходимо добавить ссылку на свой раздел -->
+		<!-- Здесь необходимо добави1ть ссылку на свой раздел -->
 
 		
 		<p />
