--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
         <h1>Оглавление</h1>
 
         <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>
-        <a HREF="#NesterenkoSergey">Сергеев Андрей Фёдорович</a>
+        <a HREF="#SergeevAF">Сергеев Андрей Фёдорович</a>
         <!-- Здесь необходимо добави1ть ссылку на свой раздел -->
 
 
