--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,8 @@
     <body>
         <h1>Оглавление</h1>
 
-        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>       
+        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>
+        <a HREF="#SergeevAndrey">Сергеев Андрей Фёдорович</a>
         <!-- Здесь необходимо добави1ть ссылку на свой раздел -->
 
 
