--- a/index.htm
+++ b/index.htm
@@ -5,8 +5,9 @@
     <body>
         <h1>Оглавление</h1>
 
-        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>        
-        <!-- Здесь необходимо добави1ть ссылку на свой раздел -->
+        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a><br>
+        <a href="#PerunovAlexandr">Перунов Александр</a>
+        <!-- Здесь необходимо добавить ссылку на свой раздел -->
 
 
         <p />
@@ -21,5 +22,16 @@
         ...
 
         <!-- Здесь необходимо добавить свой раздел -->
+
+        <a name="PerunovAlexandr"></a>
+        <h2>Перунов Александр</h2>
+        <a href='PerunovHomePage.htm'> домашняя страничка </a>
+        <h3>Как я добрался сегодня до Универитета</h3>
+        ...
+        <h3>История из жизни</h3>
+        ...
+        <h3>Анекдот</h3>
+        ...
+
     </body>
 </html>
