Суворов А.В. Тестовый коммит

--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 
         <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>        
         <!-- Здесь необходимо добави1ть ссылку на свой раздел -->
-
+        <a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
 
         <p />
         <a name="NesterenkoSergey"></a>
