Суворов создал свой раздел

--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,7 @@
         <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>        
         <!-- Здесь необходимо добави1ть ссылку на свой раздел -->
         <a href="#PerunovAlexandr">Перунов Александр</a>
+        <a href="#Suvorov">Suvorov Andrey</a>
         <a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
 
         <p />
