Каргар: Добавлен пунки в оглавление

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,8 @@
     <body>
         <h1>Оглавление</h1>
 
-        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>        
+        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a> 
+        <a HREF="#KargarЬansoor">Kargar mansoor milad</a>
         <!-- Здесь необходимо добави1ть ссылку на свой раздел -->
         <a href="#PerunovAlexandr">Перунов Александр</a>
         <a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
