--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,7 @@
         <!-- Здесь необходимо добави1ть ссылку на свой раздел -->
         <a href="#PerunovAlexandr">Перунов Александр</a>
         <a href="#Suvorov">Suvorov Andrey</a>
+        <a href="#LapidusL">Лапидус Леонид</a>
         <a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
 
         <p />
@@ -28,6 +29,16 @@
         <a name="PerunovAlexandr"></a>
         <h2>Перунов Александр</h2>
         <a href='PerunovHomePage.htm'> домашняя страничка </a>
+        <h3>Как я добрался сегодня до Универитета</h3>
+        ...
+        <h3>История из жизни</h3>
+        ...
+        <h3>Анекдот</h3>
+        ...
+
+         <a name="Leonid Lapidus"></a>
+        <h2>Лапидус Леонид</h2>
+        <a href='LapidusLHomePage.htm'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
         ...
         <h3>История из жизни</h3>
