--- a/index.htm
+++ b/index.htm
@@ -46,5 +46,15 @@
         <h3>Анекдот</h3>
         ...
 
+        <a name="LapidusY"></a>
+        <h2>Лапидус Юлия</h2>
+        <a href='LapidusYHomePage.htm'> домашняя страничка </a>
+        <h3>Как я добрался сегодня до Универитета</h3>
+        ...
+        <h3>История из жизни</h3>
+        ...
+        <h3>Анекдот</h3>
+        ...
+
     </body>
 </html>
