LapidusL исправил имена якорей

--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,7 @@
         <a href="#PerunovAlexandr">Перунов Александр</a>
         <a href="#Suvorov">Suvorov Andrey</a>
         <a href="#LapidusL">Лапидус Леонид</a>
+        <a href="#LapidusY">Лапидус Леонид</a>
         <a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
 
         <p />
@@ -36,7 +37,7 @@
         <h3>Анекдот</h3>
         ...
 
-         <a name="Leonid Lapidus"></a>
+         <a name="LapidusL"></a>
         <h2>Лапидус Леонид</h2>
         <a href='LapidusLHomePage.htm'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
