--- a/index.htm
+++ b/index.htm
@@ -5,11 +5,12 @@
     <body>
         <h1>Оглавление</h1>
 
-        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>        
+        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>
         <!-- Здесь необходимо добави1ть ссылку на свой раздел -->
         <a href="#PerunovAlexandr">Перунов Александр</a>
         <a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
-
+        <a href="#Kasatkinakaty">Касаткина Екатерина</a>
+      
         <p />
         <a name="NesterenkoSergey"></a>
         <h2>Нестеренко Сергей Юрьевич</h2>
@@ -25,6 +26,16 @@
 
         <a name="PerunovAlexandr"></a>
         <h2>Перунов Александр</h2>
+        <a href='PerunovHomePage.htm'> домашняя страничка </a>
+        <h3>Как я добрался сегодня до Универитета</h3>
+        ...
+        <h3>История из жизни</h3>
+        ...
+        <h3>Анекдот</h3>
+        ...
+
+        <a name="KasatkinaKaty"></a>
+        <h2>Касаткина Екатерина</h2>
         <a href='PerunovHomePage.htm'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
         ...
