LapidusY исправлена ссылка на раздел

--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
         <a href="#PerunovAlexandr">Перунов Александр</a>
         <a href="#Suvorov">Suvorov Andrey</a>
         <a href="#LapidusL">Лапидус Леонид</a>
-        <a href="#LapidusY">Лапидус Леонид</a>
+        <a href="#LapidusY">Лапидус Юлия</a>
         <a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
 
         <p />
