вроде создал раздел

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <body>
         <h1>Оглавление</h1>
 
-        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a> 
+        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>
         <a HREF="#KargarЬansoor">Kargar mansoor milad</a>
         <!-- Здесь необходимо добави1ть ссылку на свой раздел -->
         <a href="#PerunovAlexandr">Перунов Александр</a>
@@ -17,6 +17,7 @@
         <a name="NesterenkoSergey"></a>
         <h2>Нестеренко Сергей Юрьевич</h2>
         <a href='NesterenkoHomePage.htm'> домашняя страничка </a>
+        <a href='Suvorov.html'> home page </a>
         <h3>Как я добрался сегодня до Универитета</h3>
         ...
         <h3>История из жизни</h3>
@@ -36,7 +37,7 @@
         <h3>Анекдот</h3>
         ...
 
-         <a name="Leonid Lapidus"></a>
+        <a name="Leonid Lapidus"></a>
         <h2>Лапидус Леонид</h2>
         <a href='LapidusLHomePage.htm'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
