--- a/index.htm
+++ b/index.htm
@@ -1,16 +1,18 @@
 <html>
-	<head>
-		<title>Общая страничка группы 121</title>
-	</head>
+<head>
+    <meta charset="utf-8" />
+    <title>Общая страничка группы 121</title>
+</head>
     <body>
         <h1>Оглавление</h1>
 
-        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a> 
+        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>
         <a HREF="#KargarЬansoor">Kargar mansoor milad</a>
         <!-- Здесь необходимо добави1ть ссылку на свой раздел -->
         <a href="#PerunovAlexandr">Перунов Александр</a>
         <a href="#Suvorov">Suvorov Andrey</a>
         <a href="#LapidusL">Лапидус Леонид</a>
+        <a href="#AndrewGalkin">Галкин Андрей</a>
         <a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
 
         <p />
@@ -36,9 +38,19 @@
         <h3>Анекдот</h3>
         ...
 
-         <a name="Leonid Lapidus"></a>
+        <a name="Leonid Lapidus"></a>
         <h2>Лапидус Леонид</h2>
         <a href='LapidusLHomePage.htm'> домашняя страничка </a>
+        <h3>Как я добрался сегодня до Универитета</h3>
+        ...
+        <h3>История из жизни</h3>
+        ...
+        <h3>Анекдот</h3>
+        ...
+
+        <a name="AndrewGalkin"></a>
+        <h2>Галкин Андрей</h2>
+        <a href='GalkinHomePage.htm'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
         ...
         <h3>История из жизни</h3>
