--- a/index.htm
+++ b/index.htm
@@ -41,7 +41,13 @@
         <h2>Лапидус Леонид</h2>
         <a href='LapidusLHomePage.htm'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
-        ...
+        <p>Вот короткий рассказ:
+            <ul>
+                <li>Сел в машину</li>
+                <li>Проехал по городу</li>
+                <li>Остановился на <span style="color:red;">красный сигнал светофора</span></li>
+                <li>Запарковался под знаком <b>Р</b></li>
+            </ul>
         <h3>История из жизни</h3>
         ...
         <h3>Анекдот</h3>
