LapidusY добавила анекдот в свой раздел

--- a/index.htm
+++ b/index.htm
@@ -61,7 +61,9 @@
         <h3>История из жизни</h3>
         ...
         <h3>Анекдот</h3>
-        ...
+        <p>Идёт <i>математик</i> по улице и видит &laquo;<b>Камерный театр</b>&raquo;.</p>
+        <p>Зашёл, через полчаса выходит и разочарованно говорит:</p>
+        <p>— Совершенно тривиальный случай, <span style="color:green;">K равен трём</span> =)</p>
     <a name="KasatkinaKaty"></a>
         <h2>Касаткина Екатерина</h2>
         <a href='PerunovHomePage.htm'> домашняя страничка </a>
