--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <body>
         <h1>Оглавление</h1>
 
-        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a> 
+        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>
         <a HREF="#KargarЬansoor">Kargar mansoor milad</a>
         <!-- Здесь необходимо добави1ть ссылку на свой раздел -->
         <a href="#PerunovAlexandr">Перунов Александр</a>
@@ -22,6 +22,16 @@
         ...
         <h3>Анекдот</h3>
         ...
+
+        <p />
+        <a name="kargarmansoor"></a>
+        <h2>Kargar Mansoor Milad</h2>
+        <a href='kargar.htm'> домашняя страничка </a>
+        <h3>Как я добрался сегодня до Универитета</h3>
+        ...
+        <h3>История из жизни</h3>
+        ...
+        <h3>Анекдот</h3>
 
         <!-- Здесь необходимо добавить свой раздел -->
 
