--- a/index.htm
+++ b/index.htm
@@ -13,12 +13,12 @@
         <a href="#LapidusL">Лапидус Леонид</a>
         <a href="#LapidusY">Лапидус Юлия</a>
         <a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
-        <a href="#Kasatkinakaty">Касаткина Екатерина</a>
-      
+
         <p />
         <a name="NesterenkoSergey"></a>
         <h2>Нестеренко Сергей Юрьевич</h2>
         <a href='NesterenkoHomePage.htm'> домашняя страничка </a>
+        <a href='Suvorov.html'> home page </a>
         <h3>Как я добрался сегодня до Универитета</h3>
         ...
         <h3>История из жизни</h3>
@@ -37,17 +37,12 @@
         ...
         <h3>Анекдот</h3>
         ...
-        <a name="LapidusL"></a>
+
+         <a name="LapidusL"></a>
         <h2>Лапидус Леонид</h2>
         <a href='LapidusLHomePage.htm'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
-        <p>Вот короткий рассказ:
-            <ul>
-                <li>Сел в машину</li>
-                <li>Проехал по городу</li>
-                <li>Остановился на <span style="color:red;">красный сигнал светофора</span></li>
-                <li>Запарковался под знаком <b>Р</b></li>
-            </ul>
+        ...
         <h3>История из жизни</h3>
         ...
         <h3>Анекдот</h3>
@@ -62,14 +57,6 @@
         ...
         <h3>Анекдот</h3>
         ...
-    <a name="KasatkinaKaty"></a>
-        <h2>Касаткина Екатерина</h2>
-        <a href='PerunovHomePage.htm'> домашняя страничка </a>
-        <h3>Как я добрался сегодня до Универитета</h3>
-        ...
-        <h3>История из жизни</h3>
-        ...
-        <h3>Анекдот</h3>
-        ...
+
     </body>
 </html>
