Suvorov added personal page

--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
         <a name="NesterenkoSergey"></a>
         <h2>Нестеренко Сергей Юрьевич</h2>
         <a href='NesterenkoHomePage.htm'> домашняя страничка </a>
-        <a href='Suvorov.html'> home page </a>
+
         <h3>Как я добрался сегодня до Универитета</h3>
         ...
         <h3>История из жизни</h3>
@@ -38,7 +38,7 @@
         <h3>Анекдот</h3>
         ...
 
-         <a name="LapidusL"></a>
+        <a name="LapidusL"></a>
         <h2>Лапидус Леонид</h2>
         <a href='LapidusLHomePage.htm'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
@@ -51,6 +51,15 @@
         <a name="LapidusY"></a>
         <h2>Лапидус Юлия</h2>
         <a href='LapidusYHomePage.htm'> домашняя страничка </a>
+        <h3>Как я добрался сегодня до Универитета</h3>
+        ...
+        <h3>История из жизни</h3>
+        ...
+        <h3>Анекдот</h3>
+        ...
+
+        <a name="Suvorov"></a>
+        <a href='Suvorov.html'> home page </a>
         <h3>Как я добрался сегодня до Универитета</h3>
         ...
         <h3>История из жизни</h3>
