LapidusL добавил анекдот

--- a/index.htm
+++ b/index.htm
@@ -61,7 +61,12 @@
         <h3>История из жизни</h3>
         ...
         <h3>Анекдот</h3>
-        ...
+        <p>План действий при пожаре в ИТ-компании:</p>
+        <ul>
+            <li>git commit</li>
+            <li>git push</li>
+            <li>leave building</li>
+        </ul>
 
         <a name="LapidusY"></a>
         <h2>Лапидус Юлия</h2>
