--- a/index.htm
+++ b/index.htm
@@ -52,7 +52,13 @@
         <h2>Лапидус Леонид</h2>
         <a href='LapidusLHomePage.htm'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
-        ...
+        <p>Вот короткий рассказ:
+        <ul>
+            <li>Сел в машину</li>
+            <li>Проехал по городу</li>
+            <li>Остановился на <span style="color:red;">красный сигнал светофора</span></li>
+            <li>Запарковался под знаком <b>Р</b></li>
+        <ul>
         <h3>История из жизни</h3>
         ...
         <h3>Анекдот</h3>
@@ -71,7 +77,11 @@
         <h3>История из жизни</h3>
         ...
         <h3>Анекдот</h3>
-        ...
+        <p>Идёт <i>математик</i> по улице и видит &laquo;<b>Камерный театр</b>&raquo;.</p>
+        <p>Зашёл, через полчаса выходит и разочарованно говорит:</p>
+        <p>— Совершенно тривиальный случай, <span style="color:green;">K равен трём</span> =)</p>
+
+        
         <a name="KasatkinaKaty"></a>
         <h2>Касаткина Екатерина</h2>
         <a href='PerunovHomePage.htm'> домашняя страничка </a>
