--- a/index.htm
+++ b/index.htm
@@ -95,7 +95,7 @@
         <h2>Suvorov Andrey</h2>
         <a href='SuvorovHomePage.htm'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
-        by bus
+        by bus.
         <h3>История из жизни</h3>
         I work and sudy from 6a.m till 8p.m. Very interesting life.
         <h3>Анекдот</h3>
