Suvorvo changed "anecdote"

--- a/index.htm
+++ b/index.htm
@@ -99,6 +99,6 @@
         <h3>История из жизни</h3>
         I work and sudy from 6a.m till 8p.m. Very interesting life..
         <h3>Анекдот</h3>
-        kolobok hanged himself.
+        Kolobok hanged himself.
     </body>
 </html>
