LapidusY добавила инфу о том, как "добралась" до универа
работаю из дома, поэтому никак

--- a/index.htm
+++ b/index.htm
@@ -75,7 +75,11 @@
         <h2>Лапидус Юлия</h2>
         <a href='LapidusYHomePage.htm'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
-        ...
+        Сеодня я выполняю всю работу из дома, потому что болею. У меня <a href="https://ru.wikipedia.org/wiki/%D0%93%D1%80%D0%B8%D0%BF%D0%BF">грипп</a>. Лечусь, <i>пью таблетки:</i>
+        <ul>
+            <li>Арбидол</li>
+            <li>Нурофен</li>
+        </ul>
         <h3>История из жизни</h3>
         ...
         <h3>Анекдот</h3>
