--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
         <a href="#Suvorov">Suvorov Andrey</a>
         <a href="#LapidusL">Лапидус Леонид</a>
         <a href="#LapidusY">Лапидус Юлия</a>
+        <a href="#GalkinAndrew">Галкин Андрей</a>
         <a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
 
         <p />
@@ -52,14 +53,15 @@
         <h2>Лапидус Леонид</h2>
         <a href='LapidusLHomePage.htm'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
-        <p>Вот короткий рассказ:
-        <ul>
-            <li>Сел в машину</li>
-            <li>Проехал по городу</li>
-            <li>Остановился на <span style="color:red;">красный сигнал светофора</span></li>
-            <li>Запарковался под знаком <b>Р</b></li>
-        <ul>
-        <h3>История из жизни</h3>
+        <p>
+            Вот короткий рассказ:
+            <ul>
+                <li>Сел в машину</li>
+                <li>Проехал по городу</li>
+                <li>Остановился на <span style="color:red;">красный сигнал светофора</span></li>
+                <li>Запарковался под знаком <b>Р</b></li>
+                <ul>
+                    <h3>История из жизни</h3>
         <p>Эта история случилась совсем недавно</p>
         <p>В августе <a href="//ru.wikipedia.org/wiki/%D0%9A%D0%B0%D0%B7%D0%B0%D0%BD%D1%8C">в Казани</a> проходил чемпионат мира по профессиональному мастерству <b>WorldSkills</b>. Участники из 80 стран мира соревновались по 56 профессиональным направлениям.</p>
         <p>Мы получили бронзовую медаль</p>
@@ -83,7 +85,7 @@
         <p>Зашёл, через полчаса выходит и разочарованно говорит:</p>
         <p>— Совершенно тривиальный случай, <span style="color:green;">K равен трём</span> =)</p>
 
-        
+
         <a name="KasatkinaKaty"></a>
         <h2>Касаткина Екатерина</h2>
         <a href='PerunovHomePage.htm'> домашняя страничка </a>
@@ -102,5 +104,15 @@
         I work and sudy from 6a.m till 8p.m. Very interesting life..
         <h3>Анекдот</h3>
         Kolobok hanged himself.
+
+        <a name="GalkinAndrew"></a>
+        <h2>Галкин Андрей</h2>
+        <a href='GalkinHomePage.htm'> домашняя страничка </a>
+        <h3>Как я добрался сегодня до Универитета</h3>
+        ...
+        <h3>История из жизни</h3>
+        ...
+        <h3>Анекдот</h3>
+        ...
     </body>
 </html>
