LapidusY добавила историю из жизни

--- a/index.htm
+++ b/index.htm
@@ -83,7 +83,15 @@
             <li>Нурофен</li>
         </ul>
         <h3>История из жизни</h3>
-        ...
+        <p>Расскажу о моей дипломной работе</p>
+        <p>Я разрабатывала систему <b>искусственного интелекта</b> для обучающей системы. На тот момент никаких готовых библиотек не было, поэтому пришлось всё создавать с нуля.</p>
+        <p>Вначале я изучила все возможные варианты и остановила свой выбор на конечном автомате</p>
+        <p>Удалось спроектировать и реализовать систему. Система успешно вела диалоги на следующие темы</p>
+        <ul>
+            <li>Записывать клиента в группу</li>
+            <li>Вести обучающий диалог</li>
+            <li>Проверять знания по теме в интерактивном режиме</li>
+        </ul>
         <h3>Анекдот</h3>
         <p>Идёт <i>математик</i> по улице и видит &laquo;<b>Камерный театр</b>&raquo;.</p>
         <p>Зашёл, через полчаса выходит и разочарованно говорит:</p>
