--- a/index.htm
+++ b/index.htm
@@ -31,27 +31,35 @@
         <h2>Kargar Mansoor Milad</h2>
         <a href='kargar.htm'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
-        ...
-        <h3>История из жизни</h3>
-        ...
-        <h3>Анекдот</h3>
+        <p>
+            my story today
+            <ul>
+                <li>I came out from the home</li>
+                <li>went to bank for open new account</li>
+                <li>I did new cart </li>
+                <li>had a launch with freinds </li>
+                <li>came to class for study</li>
+            </ul>
+            <h3>История из жизни</h3>
+            ...
+            <h3>Анекдот</h3>
 
-        <!-- Здесь необходимо добавить свой раздел -->
+            <!-- Здесь необходимо добавить свой раздел -->
 
-        <a name="PerunovAlexandr"></a>
-        <h2>Перунов Александр</h2>
-        <a href='PerunovHomePage.htm'> домашняя страничка </a>
-        <h3>Как я добрался сегодня до Универитета</h3>
-        ...
-        <h3>История из жизни</h3>
-        ...
-        <h3>Анекдот</h3>
-        ...
-        <a name="LapidusL"></a>
-        <h2>Лапидус Леонид</h2>
-        <a href='LapidusLHomePage.htm'> домашняя страничка </a>
-        <h3>Как я добрался сегодня до Универитета</h3>
-        <p>Вот короткий рассказ:
+            <a name="PerunovAlexandr"></a>
+            <h2>Перунов Александр</h2>
+            <a href='PerunovHomePage.htm'> домашняя страничка </a>
+            <h3>Как я добрался сегодня до Универитета</h3>
+            ...
+            <h3>История из жизни</h3>
+            ...
+            <h3>Анекдот</h3>
+            ...
+            <a name="LapidusL"></a>
+            <h2>Лапидус Леонид</h2>
+            <a href='LapidusLHomePage.htm'> домашняя страничка </a>
+            <h3>Как я добрался сегодня до Универитета</h3>
+<p>Вот короткий рассказ:
             <ul>
                 <li>Сел в машину</li>
                 <li>Проехал по городу</li>
