--- a/index.htm
+++ b/index.htm
@@ -94,7 +94,7 @@
         <h3>Как я добрался сегодня до Универитета</h3>
         ...
         <h3>История из жизни</h3>
-        ...
+        Я работаю с системой <a href="https://cb.tatar.ru/core">Барс бюджет</a>, курирую работу МО ЧО.
         <h3>Анекдот</h3>
         ...
         <a name="Suvorov"></a>
