--- a/kasatkina.html
+++ b/kasatkina.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h2>Касаткина Екатерина</h2>
-     домашняя страничка 
+    домашняя страничка
     <h3>Как я добрался сегодня до Универитета</h3>
     меня муж привез
     <h3>История из жизни</h3>
-    ...
+    Я работаю с системой <a href="https://cb.tatar.ru/core">Барс бюджет</a>, курирую работу МО ЧО.
     <h3>Анекдот</h3>
     - Вместо того, чтобы устраивать шествие в день тигра, лучше бы пришли в тайгу да и накормили бы этих самых тигров.
     - А что из еды с собой брать?
