--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 	<head>
         <meta charset="utf-8" />
 		<title>Общая страничка группы 121</title>
@@ -108,7 +108,7 @@
         <h2>Касаткина Екатерина</h2>
         <a href='file:///C:/Users/User/source/repos/SU-Nesterenko/CommonWebSite/kasatkina.html'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
-        ...
+        на машине
         <h3>История из жизни</h3>
         Я работаю с системой <a href="https://cb.tatar.ru/core">Барс бюджет</a>, курирую работу МО ЧО.
         <h3>Анекдот</h3>
