каргар.создал свою личный раздел

--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 	<head>
         <meta charset="utf-8" />
 		<title>Общая страничка группы 121</title>
@@ -43,24 +43,32 @@
                 <li>came to class for study</li>
             </ul>
             <h3>История из жизни</h3>
-            ...
+        <p>
+            story of my life 
+            <ul>
+                <li>I started school in 2001</li>
+                <li>I started my bachelor degree in 2013 and I finished in 2017 and I decieded to come in russia for take my manster degree</li>
+                <li>now I in russia and taking my master</li>
+                
+            </ul>
             <h3>Анекдот</h3>
 
             <!-- Здесь необходимо добавить свой раздел -->
-        <a name="PerunovAlexandr"></a>
-        <h2>Перунов Александр</h2>
-        <a href='PerunovHomePage.htm'> домашняя страничка </a>
-        <h3>Как я добрался сегодня до Универитета</h3>
-        ...
-        <h3>История из жизни</h3>
-        ...
-        <h3>Анекдот</h3>
-        ...
-        <a name="LapidusL"></a>
-        <h2>Лапидус Леонид</h2>
-        <a href='LapidusLHomePage.htm'> домашняя страничка </a>
-        <h3>Как я добрался сегодня до Универитета</h3>
-        <p>Вот короткий рассказ:
+            <a name="PerunovAlexandr"></a>
+            <h2>Перунов Александр</h2>
+            <a href='PerunovHomePage.htm'> домашняя страничка </a>
+            <h3>Как я добрался сегодня до Универитета</h3>
+            ...
+            <h3>История из жизни</h3>
+            ...
+            <h3>Анекдот</h3>
+            ...
+            <a name="LapidusL"></a>
+            <h2>Лапидус Леонид</h2>
+            <a href='LapidusLHomePage.htm'> домашняя страничка </a>
+            <h3>Как я добрался сегодня до Универитета</h3>
+        <p>
+            Вот короткий рассказ:
             <ul>
                 <li>Сел в машину</li>
                 <li>Проехал по городу</li>
