Раздел был отредактирован

--- a/index.htm
+++ b/index.htm
@@ -114,10 +114,14 @@
         <h2>Галкин Андрей</h2>
         <a href='GalkinHomePage.html'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
-        ...
+        <p>Отлично!</p>
+        <br />
         <h3>История из жизни</h3>
-        ...
+        <p>Люблю Челябинск!!!</p>
+        <br />
+        <img src="1.jpg" />
+        <br />
         <h3>Анекдот</h3>
-        ...
+        <img src="memes.jpg" />
     </body>
 </html>
