Теленков А.Д. добавил раздел.

--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 	<head>
         <meta charset="utf-8" />
 		<title>Общая страничка группы 121</title>
@@ -15,6 +15,7 @@
         <a href="#LapidusY">Лапидус Юлия</a>
         <a href="#GalkinAndrew">Галкин Андрей</a>
         <a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
+        <a href="#Telenkov">Теленков Андрей</a>
 
         <p />
         <a name="NesterenkoSergey"></a>
@@ -47,20 +48,21 @@
             <h3>Анекдот</h3>
 
             <!-- Здесь необходимо добавить свой раздел -->
-        <a name="PerunovAlexandr"></a>
-        <h2>Перунов Александр</h2>
-        <a href='PerunovHomePage.htm'> домашняя страничка </a>
-        <h3>Как я добрался сегодня до Универитета</h3>
-        ...
-        <h3>История из жизни</h3>
-        ...
-        <h3>Анекдот</h3>
-        ...
-        <a name="LapidusL"></a>
-        <h2>Лапидус Леонид</h2>
-        <a href='LapidusLHomePage.htm'> домашняя страничка </a>
-        <h3>Как я добрался сегодня до Универитета</h3>
-        <p>Вот короткий рассказ:
+            <a name="PerunovAlexandr"></a>
+            <h2>Перунов Александр</h2>
+            <a href='PerunovHomePage.htm'> домашняя страничка </a>
+            <h3>Как я добрался сегодня до Универитета</h3>
+            ...
+            <h3>История из жизни</h3>
+            ...
+            <h3>Анекдот</h3>
+            ...
+            <a name="LapidusL"></a>
+            <h2>Лапидус Леонид</h2>
+            <a href='LapidusLHomePage.htm'> домашняя страничка </a>
+            <h3>Как я добрался сегодня до Универитета</h3>
+        <p>
+            Вот короткий рассказ:
             <ul>
                 <li>Сел в машину</li>
                 <li>Проехал по городу</li>
@@ -126,6 +128,17 @@
         <a name="GalkinAndrew"></a>
         <h2>Галкин Андрей</h2>
         <a href='GalkinHomePage.html'> домашняя страничка </a>
+        <h3>Как я добрался сегодня до Универитета</h3>
+        ...
+        <h3>История из жизни</h3>
+        ...
+        <h3>Анекдот</h3>
+        ...
+
+        <a name="Telenkov"></a>
+        <h2>Теленков Андрей</h2>
+        <a href='TelenkovHomePage.htm'> домашняя страничка </a>
+
         <h3>Как я добрался сегодня до Универитета</h3>
         ...
         <h3>История из жизни</h3>
