--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@
             <ul>
                 <li>I started school in 2001</li>
                 <li>I started my bachelor degree in 2013 and I finished in 2017 and I decieded to come in russia for take my manster degree</li>
-                <li>now I in russia and taking my master вупк</li>
+                <li>now I in russia and taking my master вук</li>
                 
             </ul>
             <h3>Анекдот</h3>
