Теленков А.Д. добавил анекдот.

--- a/index.htm
+++ b/index.htm
@@ -45,12 +45,12 @@
             </ul>
             <h3>История из жизни</h3>
         <p>
-            story of my life 
+            story of my life
             <ul>
                 <li>I started school in 2001</li>
                 <li>I started my bachelor degree in 2013 and I finished in 2017 and I decieded to come in russia for take my manster degree</li>
                 <li>now I in russia and taking my master вук</li>
-                
+
             </ul>
             <h3>Анекдот</h3>
 
@@ -152,11 +152,13 @@
         <a href='TelenkovHomePage.htm'> домашняя страничка </a>
 
         <h3>Как я добрался сегодня до Универитета</h3>
-        ...
+        Приехал на маршрутном такси.
         <h3>История из жизни</h3>
         ...
         <h3>Анекдот</h3>
-        ...
-        
+        Военком призывнику:
+        — То, что у вас врожденное плоскостопие, меня не убедило. Некоторые, чтобы не служить в армии, вообще
+        специально рождаются девочками!
+
     </body>
 </html>
