Теленков А.Д. добавил историю из жизни.

--- a/index.htm
+++ b/index.htm
@@ -156,7 +156,7 @@
         <h3>Как я добрался сегодня до Универитета</h3>
         Приехал на маршрутном такси.
         <h3>История из жизни</h3>
-        ...
+        История из жизни.
         <h3>Анекдот</h3>
         Военком призывнику:
         — То, что у вас врожденное плоскостопие, меня не убедило. Некоторые, чтобы не служить в армии, вообще
