edit by anton kornev from 21.10 added some info

--- a/index.htm
+++ b/index.htm
@@ -16,6 +16,7 @@
         <a href="#GalkinAndrew">Галкин Андрей</a>
         <a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
         <a href="#Telenkov">Теленков Андрей</a>
+        <a href="#Kornev">Корнев Антон</a>
 
         <p />
         <a name="NesterenkoSergey"></a>
@@ -52,7 +53,7 @@
                 <li>now I in russia and taking my master вук</li>
 
                 <li>now I in russia and taking my master в</li>
-                
+
             </ul>
             <h3>Анекдот</h3>
 
@@ -161,6 +162,21 @@
         Военком призывнику:
         — То, что у вас врожденное плоскостопие, меня не убедило. Некоторые, чтобы не служить в армии, вообще
         специально рождаются девочками!
+
+        <a name="kornev anton"></a>
+        <h2>Kornev Anton</h2>
+        <a href='kornevPage.html'> домашняя страница </a>
+        <h3>Как я добрался сегодня до Универитета</h3>
+        <p>под дождем хахахха!</p>
+        <br />
+        <h3>История из жизни</h3>
+        <p>no story today, sorry</p>
+        <br />
+        <img src="" />
+        <br />
+        <h3>Анекдот</h3>
+        <p style="width: 500px">Едет мужик(М) на машине, смотрит голосует новый русский(НР), весь ободранный, обгоревший и с рулем от Мерса. (М) подобрал его. НР сел на пассажирское сиденье и говорит: (НР)- Мужик, можно я порулю тут? (М) — Ну рули... — сказал М и подумал, что НР сумасшедший какой-то. Едут молча, НР сидит со своим рулем от Мерса и "рулит". Обгоняет их Мерс по правой стороне. НР резко крутит свою баранку вправо. Водила Мерса увидев это тоже автоматически крутит руль вправо. Обгонявший Мерс летит в кувет, кувыркаясь, и в конце концов взрывается на дне кувета. НР, поворачиваясь к мужику (водиле), говорит: — Вот так и меня полчаса назад подкололи! anekdotov.net</p>
+
 
     </body>
 </html>
