Найко добавил Личную информацию

--- a/index.htm
+++ b/index.htm
@@ -3,180 +3,186 @@
         <meta charset="utf-8" />
 		<title>Общая страничка группы 121</title>
 	</head>
-    <body>
-        <h1>Оглавление</h1>
+	<body>
+		<h1>Оглавление</h1>
 
-        <a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>
-        <a HREF="#KargarЬansoor">Kargar mansoor milad</a>
-        <!-- Здесь необходимо добави1ть ссылку на свой раздел -->
-        <a href="#PerunovAlexandr">Перунов Александр</a>
-        <a href="#Suvorov">Suvorov Andrey</a>
-        <a href="#LapidusL">Лапидус Леонид</a>
-        <a href="#LapidusY">Лапидус Юлия</a>
-        <a href="#GalkinAndrew">Галкин Андрей</a>
-        <a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
-        <a href="#Telenkov">Теленков Андрей</a>
-        <a href="#Kornev">Корнев Антон</a>
+		<a HREF="#NesterenkoSergey">Нестеренко Сергей Юрьевич</a>
+		<a HREF="#KargarЬansoor">Kargar mansoor milad</a>
+		<!-- Здесь необходимо добави1ть ссылку на свой раздел -->
+		<a href="#PerunovAlexandr">Перунов Александр</a>
+		<a href="#Suvorov">Suvorov Andrey</a>
+		<a href="#LapidusL">Лапидус Леонид</a>
+		<a href="#LapidusY">Лапидус Юлия</a>
+		<a href="#GalkinAndrew">Галкин Андрей</a>
+		<a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
+		<a href="#Telenkov">Теленков Андрей</a>
+		<a href="#Kornev">Корнев Антон</a>
+		<a href="#AndreiNaiko">Корнев Антон</a>
+		<p />
+		<a name="NesterenkoSergey"></a>
+		<h2>Нестеренко Сергей Юрьевич</h2>
+		<a href='NesterenkoHomePage.htm'> домашняя страничка </a>
 
-        <p />
-        <a name="NesterenkoSergey"></a>
-        <h2>Нестеренко Сергей Юрьевич</h2>
-        <a href='NesterenkoHomePage.htm'> домашняя страничка </a>
+		<h3>Как я добрался сегодня до Универитета</h3>
+		...
+		<h3>История из жизни</h3>
+		...
+		<h3>Анекдот</h3>
+		...
 
-        <h3>Как я добрался сегодня до Универитета</h3>
-        ...
-        <h3>История из жизни</h3>
-        ...
-        <h3>Анекдот</h3>
-        ...
+		<p />
+		<a name="kargarmansoor"></a>
+		<h2>Kargar Mansoor Milad</h2>
+		<a href='kargar.htm'> домашняя страничка </a>
+		<h3>Как я добрался сегодня до Универитета</h3>
+		<p>
+			my story today
+			<ul>
+				<li>I came out from the home</li>
+				<li>went to bank for open new account</li>
+				<li>I did new cart </li>
+				<li>had a launch with freinds </li>
+				<li>came to class for study</li>
+			</ul>
+			<h3>История из жизни</h3>
+		<p>
+			story of my life
+			<ul>
+				<li>I started school in 2001</li>
+				<li>I started my bachelor degree in 2013 and I finished in 2017 and I decieded to come in russia for take my manster degree</li>
+				<li>now I in russia and taking my master вук</li>
 
-        <p />
-        <a name="kargarmansoor"></a>
-        <h2>Kargar Mansoor Milad</h2>
-        <a href='kargar.htm'> домашняя страничка </a>
-        <h3>Как я добрался сегодня до Универитета</h3>
-        <p>
-            my story today
-            <ul>
-                <li>I came out from the home</li>
-                <li>went to bank for open new account</li>
-                <li>I did new cart </li>
-                <li>had a launch with freinds </li>
-                <li>came to class for study</li>
-            </ul>
-            <h3>История из жизни</h3>
-        <p>
-            story of my life
-            <ul>
-                <li>I started school in 2001</li>
-                <li>I started my bachelor degree in 2013 and I finished in 2017 and I decieded to come in russia for take my manster degree</li>
-                <li>now I in russia and taking my master вук</li>
+				<li>now I in russia and taking my master в</li>
 
-                <li>now I in russia and taking my master в</li>
+			</ul>
+			<h3>Анекдот</h3>
 
-            </ul>
-            <h3>Анекдот</h3>
+			<!-- Здесь необходимо добавить свой раздел -->
+			<a name="PerunovAlexandr"></a>
+			<h2>Перунов Александр</h2>
+			<a href='PerunovHomePage.htm'> домашняя страничка </a>
+			<h3>Как я добрался сегодня до Универитета</h3>
+			...
+			<h3>История из жизни</h3>
+			...
+			<h3>Анекдот</h3>
+			...
+			<a name="LapidusL"></a>
+			<h2>Лапидус Леонид</h2>
+			<a href='LapidusLHomePage.htm'> домашняя страничка </a>
+			<h3>Как я добрался сегодня до Универитета</h3>
+		<p>
+			Вот короткий рассказ:
+			<ul>
+				<li>Сел в машину</li>
+				<li>Проехал по городу</li>
+				<li>Остановился на <span style="color:red;">красный сигнал светофора</span></li>
+				<li>Запарковался под знаком <b>Р</b></li>
+			</ul>
+			<h3>История из жизни</h3>
 
-            <!-- Здесь необходимо добавить свой раздел -->
-            <a name="PerunovAlexandr"></a>
-            <h2>Перунов Александр</h2>
-            <a href='PerunovHomePage.htm'> домашняя страничка </a>
-            <h3>Как я добрался сегодня до Универитета</h3>
-            ...
-            <h3>История из жизни</h3>
-            ...
-            <h3>Анекдот</h3>
-            ...
-            <a name="LapidusL"></a>
-            <h2>Лапидус Леонид</h2>
-            <a href='LapidusLHomePage.htm'> домашняя страничка </a>
-            <h3>Как я добрался сегодня до Универитета</h3>
-        <p>
-            Вот короткий рассказ:
-            <ul>
-                <li>Сел в машину</li>
-                <li>Проехал по городу</li>
-                <li>Остановился на <span style="color:red;">красный сигнал светофора</span></li>
-                <li>Запарковался под знаком <b>Р</b></li>
-            </ul>
-            <h3>История из жизни</h3>
+		<p>Эта история случилась совсем недавно</p>
+		<p>В августе <a href="//ru.wikipedia.org/wiki/%D0%9A%D0%B0%D0%B7%D0%B0%D0%BD%D1%8C">в Казани</a> проходил чемпионат мира по профессиональному мастерству <b>WorldSkills</b>. Участники из 80 стран мира соревновались по 56 профессиональным направлениям.</p>
+		<p>Мы получили бронзовую медаль</p>
+		<h3>Анекдот</h3>
+		<p>План действий при пожаре в ИТ-компании:</p>
+		<ul>
+			<li>git commit</li>
+			<li>git push</li>
+			<li>leave building</li>
+		</ul>
 
-        <p>Эта история случилась совсем недавно</p>
-        <p>В августе <a href="//ru.wikipedia.org/wiki/%D0%9A%D0%B0%D0%B7%D0%B0%D0%BD%D1%8C">в Казани</a> проходил чемпионат мира по профессиональному мастерству <b>WorldSkills</b>. Участники из 80 стран мира соревновались по 56 профессиональным направлениям.</p>
-        <p>Мы получили бронзовую медаль</p>
-        <h3>Анекдот</h3>
-        <p>План действий при пожаре в ИТ-компании:</p>
-        <ul>
-            <li>git commit</li>
-            <li>git push</li>
-            <li>leave building</li>
-        </ul>
-
-        <a name="LapidusY"></a>
-        <h2>Лапидус Юлия</h2>
-        <a href='LapidusYHomePage.htm'> домашняя страничка </a>
-        <h3>Как я добрался сегодня до Универитета</h3>
-        Сеодня я выполняю всю работу из дома, потому что болею. У меня <a href="https://ru.wikipedia.org/wiki/%D0%93%D1%80%D0%B8%D0%BF%D0%BF">грипп</a>. Лечусь, <i>пью таблетки:</i>
-        <ul>
-            <li>Арбидол</li>
-            <li>Нурофен</li>
-        </ul>
-        <h3>История из жизни</h3>
-        <p>Расскажу о моей дипломной работе</p>
-        <p>Я разрабатывала систему <b>искусственного интелекта</b> для обучающей системы. На тот момент никаких готовых библиотек не было, поэтому пришлось всё создавать с нуля.</p>
-        <p>Вначале я изучила все возможные варианты и остановила свой выбор на конечном автомате</p>
-        <p>Удалось спроектировать и реализовать систему. Система успешно вела диалоги на следующие темы</p>
-        <ul>
-            <li>Записывать клиента в группу</li>
-            <li>Вести обучающий диалог</li>
-            <li>Проверять знания по теме в интерактивном режиме</li>
-        </ul>
-        <h3>Анекдот</h3>
-        <p>Идёт <i>математик</i> по улице и видит &laquo;<b>Камерный театр</b>&raquo;.</p>
-        <p>Зашёл, через полчаса выходит и разочарованно говорит:</p>
-        <p>— Совершенно тривиальный случай, <span style="color:green;">K равен трём</span> =)</p>
-
-
-        <a name="KasatkinaKaty"></a>
-        <h2>Касаткина Екатерина</h2>
-        <a href='file:///C:/Users/User/source/repos/SU-Nesterenko/CommonWebSite/kasatkina.html'> домашняя страничка </a>
-        <h3>Как я добрался сегодня до Универитета</h3>
-        на машине
-        <h3>История из жизни</h3>
-        Я работаю с системой <a href="https://cb.tatar.ru/core">Барс бюджет</a>, курирую работу МО ЧО.
-        <h3>Анекдот</h3>
-        ...
-        <a name="Suvorov"></a>
-        <h2>Suvorov Andrey</h2>
-        <a href='SuvorovHomePage.htm'> домашняя страничка </a>
-        <h3>Как я добрался сегодня до Универитета</h3>
-        by bus.
-        <h3>История из жизни</h3>
-        I work and sudy from 6a.m till 8p.m. Very interesting life..
-        <h3>Анекдот</h3>
-        Kolobok hanged himself.
-
-        <a name="GalkinAndrew"></a>
-        <h2>Галкин Андрей</h2>
-        <a href='GalkinHomePage.html'> домашняя страничка </a>
-        <h3>Как я добрался сегодня до Универитета</h3>
-        <p>Отлично!</p>
-        <br />
-        <h3>История из жизни</h3>
-        <p>Люблю Челябинск!!!</p>
-        <br />
-        <img src="1.jpg" />
-        <br />
-        <h3>Анекдот</h3>
-        <img src="memes.jpg" />
-
-        <a name="Telenkov"></a>
-        <h2>Теленков Андрей</h2>
-        <a href='TelenkovHomePage.htm'> домашняя страничка </a>
-
-        <h3>Как я добрался сегодня до Универитета</h3>
-        Приехал на маршрутном такси.
-        <h3>История из жизни</h3>
-        История из жизни.
-        <h3>Анекдот</h3>
-        Военком призывнику:
-        — То, что у вас врожденное плоскостопие, меня не убедило. Некоторые, чтобы не служить в армии, вообще
-        специально рождаются девочками!
-
-        <a name="kornev anton"></a>
-        <h2>Kornev Anton</h2>
-        <a href='kornevPage.html'> домашняя страница </a>
-        <h3>Как я добрался сегодня до Универитета</h3>
-        <p>под дождем хахахха!</p>
-        <br />
-        <h3>История из жизни</h3>
-        <p>no story today, sorry</p>
-        <br />
-        <img src="" />
-        <br />
-        <h3>Анекдот</h3>
-        <p style="width: 500px">Едет мужик(М) на машине, смотрит голосует новый русский(НР), весь ободранный, обгоревший и с рулем от Мерса. (М) подобрал его. НР сел на пассажирское сиденье и говорит: (НР)- Мужик, можно я порулю тут? (М) — Ну рули... — сказал М и подумал, что НР сумасшедший какой-то. Едут молча, НР сидит со своим рулем от Мерса и "рулит". Обгоняет их Мерс по правой стороне. НР резко крутит свою баранку вправо. Водила Мерса увидев это тоже автоматически крутит руль вправо. Обгонявший Мерс летит в кувет, кувыркаясь, и в конце концов взрывается на дне кувета. НР, поворачиваясь к мужику (водиле), говорит: — Вот так и меня полчаса назад подкололи! anekdotov.net</p>
+		<a name="LapidusY"></a>
+		<h2>Лапидус Юлия</h2>
+		<a href='LapidusYHomePage.htm'> домашняя страничка </a>
+		<h3>Как я добрался сегодня до Универитета</h3>
+		Сеодня я выполняю всю работу из дома, потому что болею. У меня <a href="https://ru.wikipedia.org/wiki/%D0%93%D1%80%D0%B8%D0%BF%D0%BF">грипп</a>. Лечусь, <i>пью таблетки:</i>
+		<ul>
+			<li>Арбидол</li>
+			<li>Нурофен</li>
+		</ul>
+		<h3>История из жизни</h3>
+		<p>Расскажу о моей дипломной работе</p>
+		<p>Я разрабатывала систему <b>искусственного интелекта</b> для обучающей системы. На тот момент никаких готовых библиотек не было, поэтому пришлось всё создавать с нуля.</p>
+		<p>Вначале я изучила все возможные варианты и остановила свой выбор на конечном автомате</p>
+		<p>Удалось спроектировать и реализовать систему. Система успешно вела диалоги на следующие темы</p>
+		<ul>
+			<li>Записывать клиента в группу</li>
+			<li>Вести обучающий диалог</li>
+			<li>Проверять знания по теме в интерактивном режиме</li>
+		</ul>
+		<h3>Анекдот</h3>
+		<p>Идёт <i>математик</i> по улице и видит &laquo;<b>Камерный театр</b>&raquo;.</p>
+		<p>Зашёл, через полчаса выходит и разочарованно говорит:</p>
+		<p>— Совершенно тривиальный случай, <span style="color:green;">K равен трём</span> =)</p>
 
 
-    </body>
+		<a name="KasatkinaKaty"></a>
+		<h2>Касаткина Екатерина</h2>
+		<a href='file:///C:/Users/User/source/repos/SU-Nesterenko/CommonWebSite/kasatkina.html'> домашняя страничка </a>
+		<h3>Как я добрался сегодня до Универитета</h3>
+		на машине
+		<h3>История из жизни</h3>
+		Я работаю с системой <a href="https://cb.tatar.ru/core">Барс бюджет</a>, курирую работу МО ЧО.
+		<h3>Анекдот</h3>
+		...
+		<a name="Suvorov"></a>
+		<h2>Suvorov Andrey</h2>
+		<a href='SuvorovHomePage.htm'> домашняя страничка </a>
+		<h3>Как я добрался сегодня до Универитета</h3>
+		by bus.
+		<h3>История из жизни</h3>
+		I work and sudy from 6a.m till 8p.m. Very interesting life..
+		<h3>Анекдот</h3>
+		Kolobok hanged himself.
+
+		<a name="GalkinAndrew"></a>
+		<h2>Галкин Андрей</h2>
+		<a href='GalkinHomePage.html'> домашняя страничка </a>
+		<h3>Как я добрался сегодня до Универитета</h3>
+		<p>Отлично!</p>
+		<br />
+		<h3>История из жизни</h3>
+		<p>Люблю Челябинск!!!</p>
+		<br />
+		<img src="1.jpg" />
+		<br />
+		<h3>Анекдот</h3>
+		<img src="memes.jpg" />
+
+		<a name="Telenkov"></a>
+		<h2>Теленков Андрей</h2>
+		<a href='TelenkovHomePage.htm'> домашняя страничка </a>
+
+		<h3>Как я добрался сегодня до Универитета</h3>
+		Приехал на маршрутном такси.
+		<h3>История из жизни</h3>
+		История из жизни.
+		<h3>Анекдот</h3>
+		Военком призывнику:
+		— То, что у вас врожденное плоскостопие, меня не убедило. Некоторые, чтобы не служить в армии, вообще
+		специально рождаются девочками!
+
+		<a name="kornev anton"></a>
+		<h2>Kornev Anton</h2>
+		<a href='kornevPage.html'> домашняя страница </a>
+		<h3>Как я добрался сегодня до Универитета</h3>
+		<p>под дождем хахахха!</p>
+		<br />
+		<h3>История из жизни</h3>
+		<p>no story today, sorry</p>
+		<br />
+		<img src="" />
+		<br />
+		<h3>Анекдот</h3>
+		<p style="width: 500px">Едет мужик(М) на машине, смотрит голосует новый русский(НР), весь ободранный, обгоревший и с рулем от Мерса. (М) подобрал его. НР сел на пассажирское сиденье и говорит: (НР)- Мужик, можно я порулю тут? (М) — Ну рули... — сказал М и подумал, что НР сумасшедший какой-то. Едут молча, НР сидит со своим рулем от Мерса и "рулит". Обгоняет их Мерс по правой стороне. НР резко крутит свою баранку вправо. Водила Мерса увидев это тоже автоматически крутит руль вправо. Обгонявший Мерс летит в кувет, кувыркаясь, и в конце концов взрывается на дне кувета. НР, поворачиваясь к мужику (водиле), говорит: — Вот так и меня полчаса назад подкололи! anekdotov.net</p>
+
+		<a name="AndreiNaiko"></a>
+		<h2>Andrey Naiko</h2>
+		<a href='kornevPage.html'> домашняя страница </a>
+		<h3>Как я добрался сегодня до Универитета</h3>
+		<p>пешком по слякоти!</p>
+		<br />
+
+	</body>
 </html>
