Найко добавил сылку на сайт

--- a/index.htm
+++ b/index.htm
@@ -179,7 +179,7 @@
 
 		<a name="AndreiNaiko"></a>
 		<h2>Andrey Naiko</h2>
-		<a href='kornevPage.html'> домашняя страница </a>
+		<a href='andreinaiko.html'> домашняя страница </a>
 		<h3>Как я добрался сегодня до Универитета</h3>
 		<p>пешком по слякоти!</p>
 		<br />
