Найко добавил Анегдот

--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
 		<a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
 		<a href="#Telenkov">Теленков Андрей</a>
 		<a href="#Kornev">Корнев Антон</a>
-		<a href="#AndreiNaiko">Корнев Антон</a>
+		<a href="#AndreiNaiko">Найко Андрей</a>
 		<p />
 		<a name="NesterenkoSergey"></a>
 		<h2>Нестеренко Сергей Юрьевич</h2>
@@ -182,6 +182,13 @@
 		<h3>Как я добрался сегодня до Универитета</h3>
 		<p>пешком по слякоти!</p>
 		<br />
+
+		<h3>История из жизни</h3>
+		<p>no story today, sorry</p>
+		<br />
+		<br />
+		<h3>Анекдот</h3>
+		<p style="width: 500px">Газ, нефть принадлежат народу. Это понятно. Непонятно, почему народ сам себе продает их за такие бешенные деньги. anekdotov.net</p>
 
 	</body>
 </html>
