--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,7 @@
 		<a href="#Telenkov">Теленков Андрей</a>
 		<a href="#Kornev">Корнев Антон</a>
 		<a href="#AndreiNaiko">Найко Андрей</a>
+		<a href="#RaspopovaSonya">Распопова Софья</a>
 		<p />
 		<a name="NesterenkoSergey"></a>
 		<h2>Нестеренко Сергей Юрьевич</h2>
@@ -189,6 +190,10 @@
 		<br />
 		<h3>Анекдот</h3>
 		<p style="width: 500px">Газ, нефть принадлежат народу. Это понятно. Непонятно, почему народ сам себе продает их за такие бешенные деньги. anekdotov.net</p>
+
+		<a name="RaspopovaSonya"></a>
+		<h2>Распопова Софья</h2>
+
 
 	</body>
 </html>
