Добавление информации Распопова

--- a/index.htm
+++ b/index.htm
@@ -193,7 +193,15 @@
 
 		<a name="RaspopovaSonya"></a>
 		<h2>Распопова Софья</h2>
-
+		<a href='RaspopovaHomePage.html'> домашняя страничка </a>
+		<h3>Дошла пешком до Универитета</h3>
+		<p>Отлично!</p>
+		<br />
+		<h3>История из жизни</h3>
+		<p>Такая история</p>
+		<br />
+		<br />
+		<h3>Анекдот.</h3>
 
 	</body>
 </html>
