yes its my new stupid commit sorry github

--- a/index.htm
+++ b/index.htm
@@ -166,6 +166,7 @@
 
 		<a name="Kornev"></a>
 		<h2>Kornev Anton</h2>
+		<p>commit in this project</p>
 		<a href='kornevPage.html'> домашняя страница </a>
 		<h3>Как я добрался сегодня до Универитета</h3>
 		<p>под дождем хахахха!</p>
