--- a/index.htm
+++ b/index.htm
@@ -17,6 +17,7 @@
 		<a href="C:\Users\st8\Desktop\task2\main — копия.htm">Ссылочка</a>
 		<a href="#Telenkov">Теленков Андрей</a>
 		<a href="#Kornev">Корнев Антон</a>
+		<a href="#ustinov1maxx">Устинов Максим</a>
 		<a href="#AndreiNaiko">Найко Андрей</a>
 		<a href="#RaspopovaSonya">Распопова Софья</a>
 		<p />
@@ -203,6 +204,19 @@
 		<br />
 		<br />
 		<h3>Анекдот.Анекдот</h3>
+		
+		<a name="ustinov1maxx"></a>
+		<h2>Устинов Максим</h2>
+		<a href='UsinovHomePage.html'> домашняя страничка </a>
+		<h3>Как я добрался сегодня до Универитета</h3>
+		<p>На машине</p>
+		<br />
+		<h3>История из жизни</h3>
+		<p>В прошлом году украли телефон</p>
+		<br />
+		<h3>Анекдот</h3>
+		Колобок повесился
+		<br/>
 
 	</body>
 </html>
