--- a/naikoandrei.htm
+++ b/naikoandrei.htm
@@ -1,1 +1,14 @@
-Это Моя Страница!!!
+<html>
+<head>
+	<h1>Личная страница</h1>
+</head>
+<pre>
+<body bgcolor="#000000"> 
+<font color="#00ffff"><h2>Меня зовут Андрей 
+Мне 22 года.
+Учусь В ЮУРГУ.
+</h2></font>
+</pre>
+
+</body>
+</html>
