Шмаков добавил строку "Как я добрался до Университета"

--- a/index.htm
+++ b/index.htm
@@ -223,7 +223,7 @@
         <h2>Шмаков Дмитрий</h2>
         <a href='ShmakovDmitriy.html'> домашняя страничка </a>
         <h3>Как я добрался сегодня до Универитета</h3>
-        <p>На машине</p>
+        <p>на маршрутке</p>
         <br />
         <h3>История из жизни</h3>
         <p>В прошлом году украли телефон</p>
