--- a/index.htm
+++ b/index.htm
@@ -226,7 +226,7 @@
         <p>на маршрутке</p>
         <br />
         <h3>История из жизни</h3>
-        <p>В прошлом году украли телефон</p>
+        <p>Я родился</p>
         <br />
         <h3>Анекдот</h3>
         Колобок повесился
