Шмаков добавил строку "Анекдот"

--- a/index.htm
+++ b/index.htm
@@ -229,7 +229,7 @@
         <p>Я родился</p>
         <br />
         <h3>Анекдот</h3>
-        Колобок повесился
+        Смейся или бан
         <br />
 
     </body>
